@@ -1,0 +1,9 @@
+trackstop
+=========
+
+.. dfhack-tool::
+    :summary: Overlay to allow changing track stop friction and dump direction after construction
+    :tags: fort gameplay buildings interface
+
+This script provides an overlay that is managed by the `overlay` framework.
+The overlay allows the player to change the friction and dump direction of a selected track stop after it has been constructed.
